# data-analytics-learning

./: README.md  pyproject.toml
data/01_module/02_part/: taxi_nyc_simulated.csv
notebooks/01_module/02_part/.ipynb_checkpoints/: 02_revenue_analysis_by_city-checkpoint.ipynb
notebooks/01_module/03_part/: 03_hw_analysis_pickups_peru.ipynb  03_loyal_user_analysis.ipynb  03_mp_analysis.ipynb
notebooks/01_module/05_part/: 5_mp_eda_analysis.ipynb
notebooks/01_module/06_part/: mp_ads_analysis.ipynb  rolling_ewm_analysis.ipynb  working_re_wth_analysis.ipynb  working_with_visual_models.ipynb
sql-practice/02_module/: tasks.sql
sql-practice/03_module/: tasks.sql
sql-practice/04_module/: tasks.sql
sql-practice/05_module/: tasks.sql
